frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jet-meal-frontend
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jet-meal.ru
        - api.jet-meal.ru
      secretName: jet-meal-tls
  rules:
    - host: jet-meal.ru
      http:
        paths:
          - path: /admin/restaurants
            pathType: Prefix
            backend:
              service:
                name: restaurant-ssr
                port:
                  number: 80
          - path: /admin/restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-ssr
                port:
                  number: 80
          - path: /restaurants
            pathType: Prefix
            backend:
              service:
                name: restaurant-ssr
                port:
                  number: 80
          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-ssr
                port:
                  number: 80
          - path: /catalog
            pathType: Prefix
            backend:
              service:
                name: restaurant-ssr
                port:
                  number: 80
          - path: /admin/delivery
            pathType: Prefix
            backend:
              service:
                name: delivery-ssr
                port:
                  number: 80
          - path: /my/orders
            pathType: Prefix
            backend:
              service:
                name: delivery-ssr
                port:
                  number: 80
          - path: /my/order
            pathType: Prefix
            backend:
              service:
                name: delivery-ssr
                port:
                  number: 80
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: auth-ssr
                port:
                  number: 80
          - path: /my
            pathType: Prefix
            backend:
              service:
                name: auth-ssr
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: auth-ssr
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-ssr
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jet-meal-api
  namespace: jet-meal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.jet-meal.ru
      secretName: jet-meal-tls
  rules:
    - host: api.jet-meal.ru
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: businesses-service
                port:
                  number: 80
